--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Removed all text content -->
-    <div id="grass-field">
-        <!-- Grass blades will be generated here by script.js -->
-    </div>
+    <!-- Replace div with canvas -->
+    <canvas id="grass-canvas"></canvas>
 
     <script src="script.js"></script>
 </body>
