--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     <!-- Replace div with canvas -->
     <canvas id="grass-canvas"></canvas>
 
+    <div id="controls">
+        <div class="control-group">
+            <label for="zoom-slider">Zoom:</label>
+            <input type="range" id="zoom-slider" min="1" max="10" step="0.1">
+            <span id="zoom-value"></span>
+        </div>
+        <div class="control-group">
+            <label for="density-slider">Density:</label>
+            <input type="range" id="density-slider" min="0.1" max="1.0" step="0.05">
+            <span id="density-value"></span>
+        </div>
+        <div class="control-group">
+            <label for="radius-slider">Radius:</label>
+            <input type="range" id="radius-slider" min="10" max="150" step="1">
+            <span id="radius-value"></span>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html> 
