--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <!-- Replace div with canvas -->
     <canvas id="grass-canvas"></canvas>
 
+    <audio id="background-audio" src="midsummer.mp3" loop muted></audio>
+
     <div id="controls">
+        <div id="unmute-prompt">
+            Click here to enable sound
+        </div>
         <div class="control-group">
             <label for="zoom-slider">Zoom:</label>
             <input type="range" id="zoom-slider" min="1" max="10" step="0.1">
@@ -26,6 +31,11 @@
             <label for="radius-slider">Radius:</label>
             <input type="range" id="radius-slider" min="10" max="150" step="1">
             <span id="radius-value"></span>
+        </div>
+        <div class="control-group">
+            <label for="volume-slider">Volume:</label>
+            <input type="range" id="volume-slider" min="0" max="1" step="0.01">
+            <span id="volume-value"></span>
         </div>
     </div>
 
