--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <input type="range" id="volume-slider" min="0" max="1" step="0.01">
             <span id="volume-value"></span>
         </div>
+        <button id="regenerate-button">Regenerate</button>
     </div>
 
     <script src="script.js"></script>
